--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,13 @@
-shadow{
-	text-shadow: 2px 2px;
-}
-.horizontal
-{
-    text-align: center;
-    font-size: 30px;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-	border: 3px dashed whitesmoke;
-}
 
 h2 {
 	padding: 20px;
 	width: 40%;
-	color: blueviolet;
+	color: rgb(128, 226, 43);
 	font-family: Georgia;
 }
-h3{
-	padding: 20px;
-	width: 40%;
-	color: red;
+td{
+	width: 50%;
+	color: #4CAF50;
 	font-family: Verdana;
 }
 .center {
@@ -30,28 +16,11 @@ h3{
 	border: 4px solid green;
 	padding: 10px;
 }
-ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-}
 .div-center {
 	margin: auto;
 	width: 50%;
 }
 
-li {
-	float: left;
-}
-  
-li {
-	display: block;
-	color: white;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-}
 .button {
 	display: inline-block;
 	padding: 15px 25px;
@@ -67,10 +36,12 @@ li {
 	box-shadow: 0 9px #999;
   }
   
-  .button:hover {background-color: #3e8e41}
-  
+  .button:hover {
+	background-color: #3e628e
+}
+
   .button:active {
 	background-color: #3e8e41;
-	box-shadow: 0 5px #666;
+	box-shadow: 0 5px rgb(126, 43, 43);
 	transform: translateY(4px);
   }
